# sfz-read

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md  run-cmake-mac.sh
src/: main.cpp  sfz-read.cpp  sfz-read.hpp
